Heatmaps for columns demo + added hook beforeChangeRender

--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
           <li>
             <a href="demo/merge_cells.html">Merge cells <sup>NEW</sup></a>
           </li>
+          <li>
+            <a href="demo/heatmaps.html">Create heatmaps for column values</a>
+          </li>
         </ul>
       </li>
 
