small fix + tests

--- a/test/jasmine/SpecRunner.html
+++ b/test/jasmine/SpecRunner.html
@@ -67,6 +67,8 @@
   <script src="spec/Core_destroySpec.js"></script>
   
   <script src="spec/Core_getCellMetaSpec.js"></script>
+
+  <script src="spec/Core_setCellMetaSpec.js"></script>
   
   <script src="spec/Core_getColHeaderSpec.js"></script>
   
