--- a/test/jasmine/SpecRunner.html
+++ b/test/jasmine/SpecRunner.html
@@ -10,7 +10,7 @@
 
   <link rel="stylesheet" type="text/css" href="../../dist/jquery.handsontable.css">
 
-  <link rel="stylesheet" type="text/css" href="../../extensions/jquery.handsontable.removeRow.css">
+  <link rel="stylesheet" type="text/css" href="../../plugins/removeRow/jquery.handsontable.removeRow.css">
 
   <link rel="stylesheet" type="text/css" href="../../lib/jquery-ui/css/ui-bootstrap/jquery-ui.custom.css">
 
@@ -25,6 +25,8 @@
   <script src="../../lib/jquery.min.js"></script>
   
   <script src="../../lib/numeral.js"></script>
+  
+  <script src="../../lib/numeral.de-de.js"></script>
   
   <script src="lib/jasmine-extensions.js"></script>
   
@@ -44,7 +46,7 @@
   
   <script src="../../lib/jquery-ui/js/jquery-ui.custom.js"></script>
   
-  <script src="../../extensions/jquery.handsontable.removeRow.js"></script>
+  <script src="../../plugins/removeRow/jquery.handsontable.removeRow.js"></script>
   
   <script src="spec/ColHeaderSpec.js"></script>
   
@@ -128,8 +130,6 @@
   
   <script src="spec/editors/textEditorSpec.js"></script>
   
-  <script src="spec/extensions/removeRowSpec.js"></script>
-  
   <script src="spec/plugins/PluginHooksSpec.js"></script>
   
   <script src="spec/plugins/UndoRedoSpec.js"></script>
@@ -177,6 +177,10 @@
   <script src="spec/validators/numericValidatorSpec.js"></script>
   
   <script src="../../src/plugins/dragToScroll/test/dragToScroll.spec.js"></script>
+  
+  <script src="../../src/plugins/mergeCells/test/MergeCells.canMergeRange.spec.js"></script>
+  
+  <script src="../../plugins/removeRow/test/jquery.handsontable.removeRow.spec.js"></script>
   
 
 
