--- a/test/jasmine/SpecRunner.html
+++ b/test/jasmine/SpecRunner.html
@@ -10,7 +10,7 @@
 
   <link rel="stylesheet" type="text/css" href="../../dist/jquery.handsontable.css">
 
-  <link rel="stylesheet" type="text/css" href="../../extensions/jquery.handsontable.removeRow.css">
+  <link rel="stylesheet" type="text/css" href="../../plugins/removeRow/jquery.handsontable.removeRow.css">
 
   <link rel="stylesheet" type="text/css" href="../../lib/jquery-ui/css/ui-bootstrap/jquery-ui.custom.css">
 
@@ -44,7 +44,7 @@
   
   <script src="../../lib/jquery-ui/js/jquery-ui.custom.js"></script>
   
-  <script src="../../extensions/jquery.handsontable.removeRow.js"></script>
+  <script src="../../plugins/removeRow/jquery.handsontable.removeRow.js"></script>
   
   <script src="spec/ColHeaderSpec.js"></script>
   
@@ -67,8 +67,6 @@
   <script src="spec/Core_destroySpec.js"></script>
   
   <script src="spec/Core_getCellMetaSpec.js"></script>
-
-  <script src="spec/Core_setCellMetaSpec.js"></script>
   
   <script src="spec/Core_getColHeaderSpec.js"></script>
   
@@ -97,6 +95,8 @@
   <script src="spec/Core_renderSpec.js"></script>
   
   <script src="spec/Core_selectionSpec.js"></script>
+  
+  <script src="spec/Core_setCellMetaSpec.js"></script>
   
   <script src="spec/Core_setDataAtCellSpec.js"></script>
   
@@ -129,8 +129,6 @@
   <script src="spec/editors/selectEditorSpec.js"></script>
   
   <script src="spec/editors/textEditorSpec.js"></script>
-  
-  <script src="spec/extensions/removeRowSpec.js"></script>
   
   <script src="spec/plugins/PluginHooksSpec.js"></script>
   
@@ -179,6 +177,10 @@
   <script src="spec/validators/numericValidatorSpec.js"></script>
   
   <script src="../../src/plugins/dragToScroll/test/dragToScroll.spec.js"></script>
+  
+  <script src="../../src/plugins/mergeCells/test/MergeCells.canMergeRange.spec.js"></script>
+  
+  <script src="../../plugins/removeRow/test/jquery.handsontable.removeRow.spec.js"></script>
   
 
 
